tests/snapshots/snapshot_tests__random_board_snapshot_21.snap
---
source: tests/snapshot_tests.rs
expression: recording
---
- ProposeAttack:
    attacker:
      idx: 2
      version: 1
    defender:
      idx: 7
      version: 1
    is_outer_phase: true
- DeathCheck: ~
- Attack:
    attacker:
      idx: 2
      version: 1
    defender:
      idx: 7
      version: 1
    is_outer_phase: true
- TakeDamage:
    target:
      idx: 7
      version: 1
    amount: 2
    source:
      idx: 2
      version: 1
- TakeDamage:
    target:
      idx: 2
      version: 1
    amount: 6
    source:
      idx: 7
      version: 1
- DeathCheck: ~
- Death:
    minion:
      idx: 7
      version: 1
- AfterAttack:
    attacker:
      idx: 2
      version: 1
    defender:
      idx: 7
      version: 1
    is_outer_phase: true
- DeathCheck: ~
- ProposeAttack:
    attacker:
      idx: 1
      version: 1
    defender:
      idx: 10
      version: 1
    is_outer_phase: true
- DeathCheck: ~
- Attack:
    attacker:
      idx: 1
      version: 1
    defender:
      idx: 10
      version: 1
    is_outer_phase: true
- TakeDamage:
    target:
      idx: 10
      version: 1
    amount: 5
    source:
      idx: 1
      version: 1
- TakeDamage:
    target:
      idx: 1
      version: 1
    amount: 8
    source:
      idx: 10
      version: 1
- DeathCheck: ~
- Death:
    minion:
      idx: 1
      version: 1
- AfterAttack:
    attacker:
      idx: 1
      version: 1
    defender:
      idx: 10
      version: 1
    is_outer_phase: true
- DeathCheck: ~
- ProposeAttack:
    attacker:
      idx: 4
      version: 1
    defender:
      idx: 13
      version: 1
    is_outer_phase: true
- DeathCheck: ~
- Attack:
    attacker:
      idx: 4
      version: 1
    defender:
      idx: 13
      version: 1
    is_outer_phase: true
- TakeDamage:
    target:
      idx: 13
      version: 1
    amount: 3
    source:
      idx: 4
      version: 1
- TakeDamage:
    target:
      idx: 4
      version: 1
    amount: 2
    source:
      idx: 13
      version: 1
- DeathCheck: ~
- Death:
    minion:
      idx: 13
      version: 1
- AfterAttack:
    attacker:
      idx: 4
      version: 1
    defender:
      idx: 13
      version: 1
    is_outer_phase: true
- DeathCheck: ~
- ProposeAttack:
    attacker:
      idx: 3
      version: 1
    defender:
      idx: 10
      version: 1
    is_outer_phase: true
- DeathCheck: ~
- Attack:
    attacker:
      idx: 3
      version: 1
    defender:
      idx: 10
      version: 1
    is_outer_phase: true
- TakeDamage:
    target:
      idx: 10
      version: 1
    amount: 1
    source:
      idx: 3
      version: 1
- TakeDamage:
    target:
      idx: 3
      version: 1
    amount: 8
    source:
      idx: 10
      version: 1
- DeathCheck: ~
- Death:
    minion:
      idx: 3
      version: 1
- AfterAttack:
    attacker:
      idx: 3
      version: 1
    defender:
      idx: 10
      version: 1
    is_outer_phase: true
- DeathCheck: ~
- ProposeAttack:
    attacker:
      idx: 4
      version: 1
    defender:
      idx: 9
      version: 1
    is_outer_phase: true
- DeathCheck: ~
- Attack:
    attacker:
      idx: 4
      version: 1
    defender:
      idx: 9
      version: 1
    is_outer_phase: true
- TakeDamage:
    target:
      idx: 9
      version: 1
    amount: 3
    source:
      idx: 4
      version: 1
- TakeDamage:
    target:
      idx: 4
      version: 1
    amount: 2
    source:
      idx: 9
      version: 1
- DeathCheck: ~
- Death:
    minion:
      idx: 9
      version: 1
- AfterAttack:
    attacker:
      idx: 4
      version: 1
    defender:
      idx: 9
      version: 1
    is_outer_phase: true
- DeathCheck: ~
- ProposeAttack:
    attacker:
      idx: 5
      version: 1
    defender:
      idx: 10
      version: 1
    is_outer_phase: true
- DeathCheck: ~
- Attack:
    attacker:
      idx: 5
      version: 1
    defender:
      idx: 10
      version: 1
    is_outer_phase: true
- TakeDamage:
    target:
      idx: 10
      version: 1
    amount: 5
    source:
      idx: 5
      version: 1
- TakeDamage:
    target:
      idx: 5
      version: 1
    amount: 8
    source:
      idx: 10
      version: 1
- DeathCheck: ~
- Death:
    minion:
      idx: 10
      version: 1
- Death:
    minion:
      idx: 5
      version: 1
- AfterAttack:
    attacker:
      idx: 5
      version: 1
    defender:
      idx: 10
      version: 1
    is_outer_phase: true
- DeathCheck: ~
- ProposeAttack:
    attacker:
      idx: 4
      version: 1
    defender:
      idx: 11
      version: 1
    is_outer_phase: true
- DeathCheck: ~
- Attack:
    attacker:
      idx: 4
      version: 1
    defender:
      idx: 11
      version: 1
    is_outer_phase: true
- TakeDamage:
    target:
      idx: 11
      version: 1
    amount: 3
    source:
      idx: 4
      version: 1
- TakeDamage:
    target:
      idx: 4
      version: 1
    amount: 4
    source:
      idx: 11
      version: 1
- DeathCheck: ~
- Death:
    minion:
      idx: 4
      version: 1
- Death:
    minion:
      idx: 11
      version: 1
- AfterAttack:
    attacker:
      idx: 4
      version: 1
    defender:
      idx: 11
      version: 1
    is_outer_phase: true
- DeathCheck: ~
- End: TopWin

